--- a/webgui/index.html
+++ b/webgui/index.html
@@ -283,7 +283,7 @@
     function list_programs() {
         $.ajax({
             type: "GET",
-            url: "/program/list",
+            url: "program/list",
             dataType: "json",
             success: function( data, status, jqXHR ) {
                 programs = data;
